--- a/src/style.less
+++ b/src/style.less
@@ -1,15 +1,20 @@
-@color-1: #A79C8E;
-@color-2: #F8ECC9;
-@color-3: #F1BBBA;
+@color-1: #fff;
+@color-2: #FFF3CF;
+@color-3: #FFDEDE;
 @color-4: #EB9F9F;
-@color-5: #6B5344;
+@color-5: #F7E9C6;
+@color-dark: #868787;
+@color-darker: #656666;
+@title-first: #ec003a;
+@title-second: #f37721;
+@mobile-width: 550px;
 
 html, body {
   font-family: 'Lato', sans-serif;
 }
 
 .body {
-  @media (max-width: 550px) {
+  @media (max-width: @mobile-width) {
     font-size: 2em;
   }
 }
@@ -21,21 +26,43 @@ a {
 .header {
   background-color: @color-1;
   .container {
-    padding-top: 50px;
-    padding-bottom: 50px;
-    min-height: 75vh;
-    color: #fff;
+    padding-top: 25px;
+    color: #000;
 
-    h1 { text-align: center; text-transform: uppercase; }
+    .address {
+      font-family: 'Share Tech Mono', monospace;
+      text-align: right;
+      font-size: 2em;
+      padding-right: 5px;
+      margin-bottom: 25px;
+      font-weight: 500;
+      color: @color-darker;
+    }
+
+    h1 { 
+      text-align: center; 
+      text-transform: uppercase; 
+      font-size: 2.3rem
+    }
     h3 { text-align: center }
 
-    img { width: 100%; max-height: 500px;}
+    img { width: 336px; margin-left: calc(~"50% - 168px");}
 
-    .columns {
+    .row {
+      background-color: @color-dark;
+    }
+
+    .item {
       text-align: center;
+      margin-top: 0;
+      margin-bottom: 0;
+      transition: background-color 1s ease;
 
-      &:hover {
-        background: #000;
+      @media (min-width: @mobile-width) {
+        &:hover {
+          transition: background-color 1s ease;
+          background-color: @color-darker;
+        }
       }
     }
 
@@ -44,28 +71,40 @@ a {
       text-transform: uppercase;
     }
 
-    @media (max-width: 550px) {
+    @media (max-width: @mobile-width) {
       margin: 0;
       width: 100%;
       min-height: 100vh;
       overflow: hidden;
-
-      img { 
-        width: 140%;
-        left: -20%;
-        position: relative;
-      }
     }
  }
 }
 
 .about-us {
-  background-color: @color-2;
   .container {
-
     min-height: 100vh;
     padding: 5px;
     font-size: 1.2em;
+
+    .title {
+      font-family: 'Share Tech Mono', monospace;
+      color: @color-darker;
+      margin-top: 35px;
+
+      & * { font-family: inherit; }
+
+      .first { color: @title-first; }
+      .second { color: @title-second; }
+
+      &.left {
+        text-align: left;
+      }
+      &.right {
+        text-align: right;
+      }
+    }
+
+
   }
 }
 
@@ -79,11 +118,15 @@ a {
       width: 100%;
     }
 
+    .name {
+      margin-bottom: 15px;
+    }
+
     .bio {
       text-align: justify;
     }
 
-    @media (max-width: 550px) {
+    @media (max-width: @mobile-width) {
     }
   }
 }
@@ -91,6 +134,7 @@ a {
 .call-for-speakers {
   background-color: @color-4;
   min-height: 50vh;
+  padding-top: 20px;
 } 
   
 .sign-up {
