--- a/src/style.less
+++ b/src/style.less
@@ -135,9 +135,15 @@ a {
   background-color: @color-4;
   min-height: 50vh;
   padding-top: 20px;
+
+  h1 {
+    text-align: center;
+    color: #4C4D4D;
+    font-family: 'Share Tech Mono', monospace;
+  }
 } 
   
 .sign-up {
   background-color: @color-5;
-  min-height: 50vh;
+  min-height: 80vh;
 }
