extracted css to a separate file

--- a/src/style.less
+++ b/src/style.less
@@ -143,6 +143,10 @@ a {
     font-family: 'Share Tech Mono', monospace;
   }
 
+  h1 {
+    margin-bottom: 0;
+  }
+
   h2 a {
     border: 1px solid #333447;
     padding: 10px;
@@ -150,6 +154,10 @@ a {
     background-color: #868687;
     color: #fff;
     font-family: 'Share Tech Mono', monospace;
+  }
+
+  h4 {
+    margin-bottom: 50px;
   }
 } 
   
