--- a/src/style.less
+++ b/src/style.less
@@ -85,6 +85,7 @@ a {
     min-height: 100vh;
     padding: 5px;
     font-size: 1.2em;
+    margin-bottom: 25px;
 
     .title {
       font-family: 'Share Tech Mono', monospace;
@@ -164,4 +165,8 @@ a {
 .sign-up {
   background-color: @color-5;
   min-height: 50vh;
+
+  .email {
+    color: @color-darker;
+  }
 }
