--- a/src/style.less
+++ b/src/style.less
@@ -3,6 +3,7 @@
 @color-3: #FFDEDE;
 @color-4: #fff;
 @color-5: #F7E9C6;
+@color-6: #1E2652;
 @color-dark: #868787;
 @color-darker: #656666;
 @title-first: #ec003a;
@@ -39,15 +40,15 @@ a {
       color: @color-darker;
     }
 
-    h1 { 
-      text-align: center; 
-      text-transform: uppercase; 
+    h1 {
+      text-align: center;
+      text-transform: uppercase;
       font-size: 2.3rem
     }
     h3 { text-align: center }
 
-    img { 
-      width: 336px; 
+    img {
+      width: 336px;
       margin-left: calc(~"50% - 168px");
 
 
@@ -119,7 +120,7 @@ a {
 }
 
 .speakers {
-  background-color: @color-3;
+  background-color: #c1b6b9;
 
   .container {
     padding-top: 21px;
@@ -130,7 +131,7 @@ a {
     margin-bottom: 25px;
 
     img {
-      width: 60%; 
+      width: 60%;
       margin-left: 20%;
     }
 
@@ -152,7 +153,65 @@ a {
     }
   }
 }
+.topics {
+  background-color: @color-6;
+  & * {color: #fff; }
 
+  h1{
+    text-align: center;
+    color: @color-1;
+    font-family: 'Share Tech Mono', monospace;
+    margin-bottom: 0;
+    color: @color-1;
+  }
+
+  .container {
+    padding-top: 21px;
+  }
+  .container .column {
+    margin-top: 18px;
+    margin-bottom: 25px;
+
+    img {
+      width: 60%;
+      margin-left: 20%;
+    }
+
+    .name {
+      margin-top: 15px;
+
+      & * { font-family: inherit; }
+
+      .first { color: @title-first; }
+      .second { color: @title-second; }
+    }
+
+    .bio {
+      text-align: justify;
+    }
+
+    @media (max-width: @mobile-width) {
+    }
+
+    .title {
+      font-family: 'Share Tech Mono', monospace;
+      color: @color-1;
+      margin-top: 35px;
+
+      & * { font-family: inherit; }
+
+      .first { color: @title-first; }
+      .second { color: @title-second; }
+
+      &.left {
+        text-align: left;
+      }
+      &.right {
+        text-align: right;
+      }
+    }
+  }
+}
 .call-for-speakers {
   background-color: @color-4;
   min-height: 50vh;
@@ -182,10 +241,53 @@ a {
   h4 {
     margin-bottom: 50px;
   }
-} 
-  
+}
+.partners {
+  background-color: #805b76;
+  h1 {
+    text-align: center;
+    color: #4C4D4D;
+    font-family: 'Share Tech Mono', monospace;
+  }
+
+  h1 {
+    margin-bottom: 0;
+    color: #333447;
+  }
+
+  .container {
+    padding-top: 21px;
+  }
+
+  .container .column {
+    margin-top: 18px;
+    margin-bottom: 25px;
+
+    img {
+      width: 60%;
+      margin-left: 20%;
+    }
+
+    .name {
+      margin-top: 15px;
+
+      & * { font-family: inherit; }
+
+      .first { color: @title-first; }
+      .second { color: @title-second; }
+
+    }
+
+    .bio {
+      text-align: justify;
+    }
+
+    @media (max-width: @mobile-width) {
+    }
+  }
+}
 .sign-up {
-  background-color: @color-5;
+  background-color: #d29624;
   min-height: 50vh;
   padding-top: 50px;
   padding-bottom: 50px;
