--- a/src/style.less
+++ b/src/style.less
@@ -115,11 +115,18 @@ a {
       }
     }
 
-
+    h4 a {
+      border: 1px solid #333447;
+      padding: 10px;
+      text-decoration: none;
+      background-color: #333447;
+      color: #fff;
+      font-family: 'Share Tech Mono', monospace;
+    }
   }
 }
 
-.speakers {
+.speakers, .topics {
   background-color: #c1b6b9;
 
   .container {
@@ -153,65 +160,29 @@ a {
     }
   }
 }
+
 .topics {
   background-color: @color-6;
   & * {color: #fff; }
+  padding-bottom: 20px;
 
-  h1{
+  h1 {
     text-align: center;
     color: @color-1;
     font-family: 'Share Tech Mono', monospace;
     margin-bottom: 0;
-    color: @color-1;
   }
 
-  .container {
-    padding-top: 21px;
-  }
-  .container .column {
-    margin-top: 18px;
-    margin-bottom: 25px;
+  .timer {
+    text-align: center;
+    width: 100%;
 
-    img {
-      width: 60%;
-      margin-left: 20%;
-    }
-
-    .name {
-      margin-top: 15px;
-
-      & * { font-family: inherit; }
-
-      .first { color: @title-first; }
-      .second { color: @title-second; }
-    }
-
-    .bio {
-      text-align: justify;
-    }
-
-    @media (max-width: @mobile-width) {
-    }
-
-    .title {
-      font-family: 'Share Tech Mono', monospace;
-      color: @color-1;
-      margin-top: 35px;
-
-      & * { font-family: inherit; }
-
-      .first { color: @title-first; }
-      .second { color: @title-second; }
-
-      &.left {
-        text-align: left;
-      }
-      &.right {
-        text-align: right;
-      }
+    & * {
+      font-family: 'Share Tech Mono', monospace ;
     }
   }
 }
+
 .call-for-speakers {
   background-color: @color-4;
   min-height: 50vh;
@@ -242,21 +213,17 @@ a {
     margin-bottom: 50px;
   }
 }
+
 .partners {
   background-color: #805b76;
   h1 {
     text-align: center;
-    color: #4C4D4D;
+    color: #000;
     font-family: 'Share Tech Mono', monospace;
   }
 
-  h1 {
-    margin-bottom: 0;
-    color: #333447;
-  }
-
   .container {
-    padding-top: 21px;
+    padding-top: 20px;
   }
 
   .container .column {
@@ -264,28 +231,21 @@ a {
     margin-bottom: 25px;
 
     img {
-      width: 60%;
-      margin-left: 20%;
-    }
+      width: 100%;
+      margin-top: 50px;
+      @media (max-width: @mobile-width) {
+        margin-top: 0;
+      }
 
-    .name {
-      margin-top: 15px;
-
-      & * { font-family: inherit; }
-
-      .first { color: @title-first; }
-      .second { color: @title-second; }
-
-    }
-
-    .bio {
-      text-align: justify;
-    }
-
-    @media (max-width: @mobile-width) {
+      &.square {
+        width: 60%;
+        margin-left: 20%;
+        margin-top: 0;
+      }
     }
   }
 }
+
 .sign-up {
   background-color: #d29624;
   min-height: 50vh;
