--- a/src/style.less
+++ b/src/style.less
@@ -126,6 +126,10 @@ a {
   }
 }
 
+.speakers {
+  padding-bottom: 20px;
+}
+
 .speakers, .topics {
   background-color: #c1b6b9;
 
@@ -150,10 +154,6 @@ a {
       .first { color: @title-first; }
       .second { color: @title-second; }
 
-    }
-
-    .bio {
-      text-align: justify;
     }
 
     @media (max-width: @mobile-width) {
