--- a/src/style.less
+++ b/src/style.less
@@ -45,7 +45,13 @@ a {
       text-transform: uppercase;
       font-size: 2.3rem
     }
-    h3 { text-align: center }
+    h3 {
+      text-align: center;
+      &.promo {
+        font-size: 1.5em;
+      }
+    }
+
 
     img {
       width: 336px;
@@ -79,6 +85,7 @@ a {
     a {
       color: #fff;
       text-transform: uppercase;
+      text-decoration: none;
     }
 
     @media (max-width: @mobile-width) {
@@ -183,7 +190,7 @@ a {
   }
 }
 
-.call-for-speakers {
+#schedule {
   background-color: @color-4;
   min-height: 50vh;
   padding-top: 20px;
@@ -195,22 +202,43 @@ a {
     font-family: 'Share Tech Mono', monospace;
   }
 
-  h1 {
+  .day-name {
+    text-align: center;
     margin-bottom: 0;
-    color: #333447;
+    float: left;
+    width: 100%;
+
+    &.spacer {
+      border-top: 2px solid @color-dark;
+      padding-top: 15px;
+    }
   }
 
-  h2 a {
-    border: 1px solid #333447;
-    padding: 10px;
-    text-decoration: none;
-    background-color: #333447;
-    color: #fff;
-    font-family: 'Share Tech Mono', monospace;
-  }
+  .day {
+    .slot {
+      float: left;
+      width: 100%;
+      padding: 15px 5px;
+      font-size: 1.2em;
+      border-bottom: solid 1px rgba(0,0,0,0.13);
 
-  h4 {
-    margin-bottom: 50px;
+      time {
+        float: left;
+        width: 20%;
+        opacity: 0.6;
+      }
+
+      .topic {
+        color: #4C4D4D;
+        width: 80%;
+        margin-left: 20%;
+
+        .name {
+          width: 100%;
+          font-weight: 800;
+        }
+      }
+    }
   }
 }
 
