--- a/src/style.less
+++ b/src/style.less
@@ -215,12 +215,23 @@ a {
   }
 
   .day {
+
+    @media (min-width: @mobile-width) {
+      &.advanced {
+        margin-left: -1%;
+      }
+    }
+
     .slot {
       float: left;
       width: 100%;
       padding: 15px 5px;
       font-size: 1.2em;
       border-bottom: solid 1px rgba(0,0,0,0.13);
+
+      &.noborder {
+        border-bottom: 0 none #000;
+      }
 
       time {
         float: left;
