--- a/src/style.less
+++ b/src/style.less
@@ -247,6 +247,7 @@ a {
         .name {
           width: 100%;
           font-weight: 800;
+          color: @title-first;
         }
       }
     }
