cleared up the agenda

--- a/src/style.less
+++ b/src/style.less
@@ -250,6 +250,11 @@ a {
         opacity: 0.6;
       }
 
+      .part {
+        opacity: 0.6;
+        font-size: 0.8em;
+      }
+
       .topic, .org {
         color: #4C4D4D;
         width: 80%;
