--- a/src/style.less
+++ b/src/style.less
@@ -236,11 +236,11 @@ h4.external-btn,h2.external-btn {
   text-align: center;
 
   a {
-    border: 1px solid #333447;
+    border: 1px solid @color-dark;
     padding: 10px;
     text-decoration: none;
     display: inline-block;
-    background-color: #333447;
+    background-color: @color-dark;
     color: #fff;
     font-family: 'Share Tech Mono', monospace;
   }
