updated color and pictures

--- a/src/style.less
+++ b/src/style.less
@@ -275,7 +275,7 @@ h4.external-btn,h2.external-btn {
 
 .speakers {
   padding-bottom: 20px;
-  background-color: @color-1;
+  background-color: rgb(252,208,219);
 
   h3 {
     text-align: center;
