font weight increased

--- a/src/style.less
+++ b/src/style.less
@@ -16,6 +16,10 @@ html, body {
   font-family: 'Lato', sans-serif;
 }
 
+p {
+  font-weight: 400 !important;
+}
+
 .body {
   @media (max-width: @mobile-width) {
     font-size: 2em;
