--- a/src/style.less
+++ b/src/style.less
@@ -287,6 +287,10 @@ h4.external-btn,h2.external-btn {
   }
 }
 
+.center {
+  text-align: center;
+}
+
 .speakers {
   padding-bottom: 20px;
   background-color: rgb(252,208,219);
