--- a/src/style.less
+++ b/src/style.less
@@ -45,6 +45,7 @@ a {
     font-size: 17px; 
     font-weight: 700; 
     letter-spacing: 1.5px; 
+    color: @color-1;
 
     a {
       color: @color-1;
@@ -293,7 +294,7 @@ h4.external-btn,h2.external-btn {
 
 .speakers {
   padding-bottom: 20px;
-  background-color: rgb(252,208,219);
+  background-color: #cad4e8;
 
   h3 {
     text-align: center;
@@ -311,6 +312,11 @@ h4.external-btn,h2.external-btn {
 .speakers, .topics {
   .container {
     padding-top: 21px;
+  }
+
+  .container .wide {
+    width: 100%;
+    text-align: center;
   }
 
   .container .column {
@@ -492,7 +498,7 @@ h4.external-btn,h2.external-btn {
 }
 
 .sign-up {
-  background-color: #d29624;
+  background-color: #a4abfb;
   min-height: 50vh;
   padding-top: 50px;
   padding-bottom: 50px;
