--- a/src/style.less
+++ b/src/style.less
@@ -310,6 +310,10 @@ h4.external-btn,h2.external-btn {
   padding-bottom: 20px;
   background-color: #d4e8ca;
 
+  h2.title {
+    color: #333;
+  }
+
   h3 {
     text-align: center;
     margin-bottom: 2px;
