--- a/src/style.less
+++ b/src/style.less
@@ -308,7 +308,7 @@ h4.external-btn,h2.external-btn {
 
 .organizers {
   padding-bottom: 20px;
-  background-color: #d4e8ca;
+  background-color: #f2fcd4;
 
   h2.title {
     color: #333;
