mobile styles improved a bit

--- a/src/style.less
+++ b/src/style.less
@@ -521,12 +521,12 @@ h4.external-btn,h2.external-btn {
 
 .sign-up {
   background-color: #a4abfb;
-  min-height: 50vh;
+  min-height: 60vh;
   padding-top: 50px;
   padding-bottom: 50px;
 
   @media (max-width: @mobile-width) {
-    min-height: 100vh;
+    min-height: 900px;
   }
 
   .email {
