--- a/src/style.less
+++ b/src/style.less
@@ -533,6 +533,10 @@ h4.external-btn,h2.external-btn {
     color: @color-darker;
     text-align: center;
     margin-top: 30px;
+
+    @media (max-width: @mobile-width) {
+      display: none;
+    }
   }
 
   .eb-container {
