added a covid note

--- a/src/style.less
+++ b/src/style.less
@@ -7,6 +7,7 @@
 @color-dark: #333333;
 @color-darker: #656666;
 @title-first: #ec003a;
+@covid-background: #f099af;
 @title-second: #f37721;
 @mobile-width: 580px;
 @menu-bar-height: 70px;
@@ -28,6 +29,16 @@ p {
 
 a {
   cursor: pointer;
+}
+
+.covid {
+  padding: 0px 10px 20px 10px;
+  border: 2px dashed #000;
+  background: @covid-background;
+
+  h2 {
+    text-align: center;
+  }
 }
 
 .menu-bar {
